# game-engine-template

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
include/: .gitignore  CMakeLists.txt  README.md
include/MyEngine/: Version.h.in
include/MyEngine/engine/: engine.h
src/editor/: CMakeLists.txt  main.cpp
src/engine/: CMakeLists.txt  engine.cpp
